--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,16 +12,40 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
-    buildTypes {
+
+    signingConfigs {
+        debug {
+            storeFile file("../keystore/ltsykey-debug.jks")
+            storePassword "123456"
+            keyAlias "android"
+            keyPassword "123456"
+        }
         release {
+            storeFile file("../keystore/ltsykey.jks")
+            storePassword "MERITCB768@lxq"
+            keyAlias "ltsy"
+            keyPassword "MERITCB768@lxq"
+        }
+    }
+
+    buildTypes {
+        debug {
+            buildConfigField "boolean", "LOG_DEBUG", "true"
+            signingConfig signingConfigs.debug
             minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        release {
+            buildConfigField "boolean", "LOG_DEBUG", "false"
+            signingConfig signingConfigs.release
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -29,8 +53,6 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:support-vector-drawable:25.3.1'
     testCompile 'junit:junit:4.12'
-
-
     //okhttp
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
@@ -45,4 +67,12 @@ dependencies {
     compile 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
     //Toast
     compile project(path: ':tastytoast')
+    //headAndroidFooterRecyclerView
+    compile project(path: ':HeaderAndFooterRecyclerView')
+    //commentUtil
+    compile project(path: ':commonutils')
+    //SmartTabLayout
+    compile 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
+    compile 'com.ogaclejapan.smarttablayout:utils-v4:1.6.1@aar'
+    compile files('libs/AMap2DMap_5.2.0_AMapSearch_5.2.1_AMapLocation_3.4.1_20170630.jar')
 }
