--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name=".CustomeApplication"
         android:theme="@style/AppTheme.NoActionBar">
         <activity
             android:name=".view.SplashActivity"
