--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,11 @@
         <activity android:name=".view.PhotoCollectionActivity"
             android:screenOrientation="portrait"/>
 
+        <activity android:name=".view.AddPhotoActivity"
+            android:screenOrientation="portrait"/>
 
+        <activity android:name=".view.SettingActivity"
+            android:screenOrientation="portrait"/>
         <!--高德地图-->
         <meta-data android:name="com.amap.api.v2.apikey" android:value="34a05e779c0571897e8000363f8e68d2">
             //开发者申请的key
