--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,4 +85,8 @@ dependencies {
     compile 'com.facebook.fresco:animated-gif:0.14.1'
     //一个展开菜单
     compile 'com.github.joaquimley:faboptions:1.1.2'
+    //图片裁剪上传
+    compile project(':takephoto_library')
+    //沉浸式状态栏
+    compile 'com.jaeger.statusbarutil:library:1.4.0'
 }
