--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         android:theme="@style/AppTheme.NoActionBar">
         <activity
             android:name=".view.SplashActivity"
+            android:theme="@style/CustomStatuBarTheme"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
