--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,10 +23,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:name=".CustomeApplication"
-        android:theme="@style/AppTheme.NoActionBar">
+        android:theme="@style/AppNoActionbarTheme">
         <activity
             android:name=".view.SplashActivity"
-            android:theme="@style/CustomStatuBarTheme"
+            android:theme="@style/AppNoActionbarTheme"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -46,6 +46,8 @@
             android:screenOrientation="portrait"/>
 
         <activity android:name=".view.AddPhotoActivity"
+            android:theme="@style/AppTheme"
+            android:label="添加作品"
             android:screenOrientation="portrait"/>
 
         <activity android:name=".view.SettingActivity"
