--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,12 +48,34 @@
         <activity android:name=".view.AddPhotoActivity"
             android:theme="@style/AppCanSlidrTheme"
             android:label="添加作品"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait"/>
+
+        <activity android:name=".view.AddPhotoDescriptActivity"
+            android:theme="@style/AppCanSlidrTheme"
+            android:label="添加描述"
             android:screenOrientation="portrait"/>
 
         <activity android:name=".view.SettingActivity"
             android:theme="@style/AppCanSlidrTheme"
             android:label="设置"
             android:screenOrientation="portrait"/>
+
+        <activity android:name=".view.AddPhotoChooseCameraActivity"
+            android:theme="@style/AppCanSlidrTheme"
+            android:screenOrientation="portrait"
+            android:label="拍摄器材"/>
+
+        <activity android:name=".view.AddPhotoAddressActivity"
+            android:theme="@style/AppCanSlidrTheme"
+            android:screenOrientation="portrait"
+            android:label="拍摄地点"/>
+
+        <activity android:name=".view.AddPhotoCategoryActivity"
+            android:theme="@style/AppCanSlidrTheme"
+            android:screenOrientation="portrait"
+            android:label="作品分类"/>
+
         <!--高德地图-->
         <meta-data android:name="com.amap.api.v2.apikey" android:value="34a05e779c0571897e8000363f8e68d2">
             //开发者申请的key
