添加了一个录音功能

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,4 +96,6 @@ dependencies {
     compile 'com.afollestad.material-dialogs:core:0.9.4.5'
     //colorful-theme
     compile project(':colorful')
+    //录制声音
+    compile project(':audio_recorder')
 }
