--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':HeaderAndFooterRecyclerView', ':commonutils', ':takephoto_library', ':colorful'
+include ':app', ':HeaderAndFooterRecyclerView', ':commonutils', ':takephoto_library', ':colorful', ':audio_recorder'
